<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveForResultActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_data_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_number"
            android:layout_marginBottom="16dp" />

        <RadioGroup
            android:id="@+id/rg_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/_50"
                android:buttonTint="@color/purple_500"/>

            <RadioButton
                android:id="@+id/rb_100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/_100"
                android:buttonTint="@color/purple_500" />

            <RadioButton
                android:id="@+id/rb_150"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/_150"
                android:buttonTint="@color/purple_500" />

            <RadioButton
                android:id="@+id/rb_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/_200"
                android:buttonTint="@color/purple_500" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>